platform/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - console.minio.internal
  rules:
    - backendRefs:
        - name: minio-console
          port: 9001
